2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/hc08/ralloc2.cc:
	  Make optimal register allocator less port-specific.

2012-04-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/gen.c,
	  src/hc08/ralloc2.cc,
	  src/hc08/gen.c,
	  src/hc08/ralloc.c,
	  src/SDCCicode.c:
	  Optimal register allocator for hc08 working partially.

2012-04-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (ifOperandsHave): fixed bug #3516746

2012-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/string.c:
	  Added test for strrchr().
	* src/z80/gen.c,
	  src/SDCCpeeph.c:
	  Fixed memory leaks.

2012-04-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc.c,
	  src/hc08/ralloc.c,
	  src/hc08/gen.c:
	  Enable new allocator as dummy, spilling everything.

2012-04-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc.c,
	  src/hc08/ralloc2.cc,
	  src/hc08/ralloc.c:
	  Preparations for optimal register allocation for hc08.

2012-04-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/Makefile.in,
	  support/regression/collate-results.py : another fix for bug #3477347
	* support/regression/ports/hc08/spec.mk: increase timeout to 30 seconds

2012-04-08 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCgen.c:
	  don't emit leading whitespaces in inline asm, 2nd try
	  fixed bug #3515390 - asm with leading whitespace passed to backends
	* src/z80/peep.c: made z80instructionSize() function more
	  ropbust: accept arbitrary number of arbitrary space characters
	  between mnemonic and the first operand

2012-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix invalid reads.
	* src/z80/gen.c:
	  Fix a memory leak.

2012-04-07 Borut Razem <borut.razem AT gmail.com>
