@@ -2915,32 +2915,6 @@ packRegisters (eBBlock ** ebpp, int blockno)
       if (POINTER_GET (ic) && IS_SYMOP (IC_LEFT (ic)))
         OP_SYMBOL (IC_LEFT (ic))->uptr = 1;
 
-      if (!SKIP_IC2 (ic))
-        {
-#if 0
-          /* if we are using a symbol on the stack
-             then we should say hc08_ptrRegReq */
-          if (ic->op == IFX && IS_SYMOP (IC_COND (ic)))
-            hc08_ptrRegReq += ((OP_SYMBOL (IC_COND (ic))->onStack ||
-                                 OP_SYMBOL (IC_COND (ic))->iaccess) ? 1 : 0);
-          else if (ic->op == JUMPTABLE && IS_SYMOP (IC_JTCOND (ic)))
-            hc08_ptrRegReq += ((OP_SYMBOL (IC_JTCOND (ic))->onStack ||
-                              OP_SYMBOL (IC_JTCOND (ic))->iaccess) ? 1 : 0);
-          else
-            {
-              if (IS_SYMOP (IC_LEFT (ic)))
-                hc08_ptrRegReq += ((OP_SYMBOL (IC_LEFT (ic))->onStack ||
-                                OP_SYMBOL (IC_LEFT (ic))->iaccess) ? 1 : 0);
-              if (IS_SYMOP (IC_RIGHT (ic)))
-                hc08_ptrRegReq += ((OP_SYMBOL (IC_RIGHT (ic))->onStack ||
-                               OP_SYMBOL (IC_RIGHT (ic))->iaccess) ? 1 : 0);
-              if (IS_SYMOP (IC_RESULT (ic)))
-                hc08_ptrRegReq += ((OP_SYMBOL (IC_RESULT (ic))->onStack ||
-                              OP_SYMBOL (IC_RESULT (ic))->iaccess) ? 1 : 0);
-            }
-#endif
-        }
-
       /* if the condition of an if instruction
          is defined in the previous instruction and
          this is the only usage then
@@ -2956,148 +2930,9 @@ packRegisters (eBBlock ** ebpp, int blockno)
           continue;
         }
 
-      #if 0
-      /* if the condition of an if instruction
-         is defined in the previous GET_POINTER instruction and
-         this is the only usage then
-         mark the itemp as accumulator use */
-      if ((POINTER_GET (ic) && getSize (operandType (IC_RESULT (ic))) <=1) &&
-          ic->next && ic->next->op == IFX &&
-          bitVectnBitsOn (OP_USES(IC_RESULT(ic)))==1 &&
-          isOperandEqual (IC_RESULT (ic), IC_COND (ic->next)) &&
-          OP_SYMBOL (IC_RESULT (ic))->liveTo <= ic->next->seq)
-        {
-          OP_SYMBOL (IC_RESULT (ic))->accuse = 1;
-          continue;
-        }
-
-      if (ic->op != IFX && ic->op !=JUMPTABLE && !POINTER_SET (ic)
-          && IC_RESULT (ic) && IS_ITEMP (IC_RESULT (ic))
-          && getSize (operandType (IC_RESULT (ic))) == 1
-          && bitVectnBitsOn (OP_USES (IC_RESULT (ic))) == 1
-          && ic->next
-          && OP_SYMBOL (IC_RESULT (ic))->liveTo <= ic->next->seq)
-        {
-          int accuse = 0;
-
-          if (ic->next->op == IFX)
-            {
-              if (isOperandEqual (IC_RESULT (ic), IC_COND (ic->next)))
-                accuse = 1;
-            }
-          else if (ic->next->op == JUMPTABLE)
-            {
-               if (isOperandEqual (IC_RESULT (ic), IC_JTCOND (ic->next)))
-                 accuse = 1;
-            }
-          else
-            {
-               if (isOperandEqual (IC_RESULT (ic), IC_LEFT (ic->next)))
-                 accuse = 1;
-               if (isOperandEqual (IC_RESULT (ic), IC_RIGHT (ic->next)))
-                 accuse = 1;
-            }
-
-          if (accuse)
-            {
-              OP_SYMBOL (IC_RESULT (ic))->accuse = 1;
-              continue;
-            }
-
-        }
-      #endif
-
       /* reduce for support function calls */
       if (ic->supportRtn || (ic->op != IFX && ic->op != JUMPTABLE))
         packRegsForSupport (ic, ebp);
-
-      #if 0
-      /* some cases the redundant moves can
-         can be eliminated for return statements */
-      if ((ic->op == RETURN || (ic->op == SEND && ic->argreg == 1)) &&
-          /* !isOperandInFarSpace (IC_LEFT (ic)) && */
-          options.model == MODEL_SMALL)
-        {
-          packRegsForOneuse (ic, IC_LEFT (ic), ebp);
-        }
-
-      /* if pointer set & left has a size more than
-         one and right is not in far space */
-      if (POINTER_SET (ic) &&
-          /* !isOperandInFarSpace (IC_RIGHT (ic)) && */
-          !OP_SYMBOL (IC_RESULT (ic))->remat &&
-          !IS_OP_RUONLY (IC_RIGHT (ic))
-          /* && getSize (aggrToPtr (operandType (IC_RESULT (ic)), FALSE)) > 1 */ )
-        {
-          packRegsForOneuse (ic, IC_RESULT (ic), ebp);
-        }
-
-      /* if pointer get */
-      if (POINTER_GET (ic) &&
-          IS_SYMOP (IC_LEFT (ic)) &&
-          /* !isOperandInFarSpace (IC_RESULT (ic)) && */
-          !OP_SYMBOL (IC_LEFT (ic))->remat &&
-          !IS_OP_RUONLY (IC_RESULT (ic))
-           /* && getSize (aggrToPtr (operandType (IC_LEFT (ic)), FALSE)) > 1 */)
-        {
-          packRegsForOneuse (ic, IC_LEFT (ic), ebp);
-        }
-
-      /* if this is a cast for integral promotion then
-         check if it's the only use of the definition of the
-         operand being casted/ if yes then replace
-         the result of that arithmetic operation with
-         this result and get rid of the cast */
-      if (ic->op == CAST)
-        {
-          sym_link *fromType = operandType (IC_RIGHT (ic));
-          sym_link *toType = operandType (IC_LEFT (ic));
-
-          if (IS_INTEGRAL (fromType) && IS_INTEGRAL (toType) &&
-              getSize (fromType) != getSize (toType) &&
-              SPEC_USIGN (fromType) == SPEC_USIGN (toType))
-            {
-              iCode *dic = packRegsForOneuse (ic, IC_RIGHT (ic), ebp);
-              if (dic)
-                {
-                  if (IS_ARITHMETIC_OP (dic))
-                    {
-                      bitVectUnSetBit(OP_SYMBOL(IC_RESULT(dic))->defs,dic->key);
-                      ReplaceOpWithCheaperOp(&IC_RESULT (dic), IC_RESULT (ic));
-                      remiCodeFromeBBlock (ebp, ic);
-                      bitVectUnSetBit(OP_SYMBOL(IC_RESULT(ic))->defs,ic->key);
-                      hTabDeleteItem (&iCodehTab, ic->key, ic, DELETE_ITEM, NULL);
-                      OP_DEFS(IC_RESULT (dic))=bitVectSetBit (OP_DEFS (IC_RESULT (dic)), dic->key);
-                      ic = ic->prev;
-                    }
-                  else
-                    {
-                      OP_SYMBOL (IC_RIGHT (ic))->ruonly = 0;
-                    }
-                }
-            }
-          else
-            {
-              /* if the type from and type to are the same
-                 then if this is the only use then pack it */
-              if (compareType (operandType (IC_RIGHT (ic)),
-                             operandType (IC_LEFT (ic))) == 1)
-                {
-                  iCode *dic = packRegsForOneuse (ic, IC_RIGHT (ic), ebp);
-                  if (dic)
-                    {
-                      bitVectUnSetBit(OP_SYMBOL(IC_RESULT(dic))->defs,dic->key);
-                      ReplaceOpWithCheaperOp(&IC_RESULT (dic), IC_RESULT (ic));
-                      remiCodeFromeBBlock (ebp, ic);
-                      bitVectUnSetBit(OP_SYMBOL(IC_RESULT(ic))->defs,ic->key);
-                      hTabDeleteItem (&iCodehTab, ic->key, ic, DELETE_ITEM, NULL);
-                      OP_DEFS(IC_RESULT (dic))=bitVectSetBit (OP_DEFS (IC_RESULT (dic)), dic->key);
-                      ic = ic->prev;
-                    }
-                }
-            }
-        }
-      #endif
 
       /* pack for PUSH
          iTempNN := (some variable in farspace) V1
@@ -3365,97 +3200,6 @@ serialRegMark (eBBlock ** ebbs, int count)
                   spillThis (sym);
                   printf ("Spilt %s due to byte limit.\n", sym->name);
                 }
-#if 0
-              /* If the live range preceeds the point of definition
-                 then ideally we must take into account registers that
-                 have been allocated after sym->liveFrom but freed
-                 before ic->seq. This is complicated, so spill this
-                 symbol instead and let fillGaps handle the allocation. */
-              if (sym->liveFrom < ic->seq)
-                {
-                  spillThis (sym);
-                  continue;
-                }
-
-              /* if it has a spillocation & is used less than
-                 all other live ranges then spill this */
-              if (willCS)
-                {
-                  if (sym->usl.spillLoc)
-                    {
-                      symbol *leastUsed = leastUsedLR (liveRangesWith (spillable,
-                                                                       allLRs, ebbs[i], ic));
-                      if (leastUsed && leastUsed->used > sym->used)
-                        {
-                          spillThis (sym);
-                          continue;
-                        }
-                    }
-                  else
-                    {
-                      /* if none of the liveRanges have a spillLocation then better
-                         to spill this one than anything else already assigned to registers */
-                      if (liveRangesWith(spillable,noSpilLoc,ebbs[i],ic))
-                        {
-                          /* if this is local to this block then we might find a block spil */
-                          if (!(sym->liveFrom >= ebbs[i]->fSeq && sym->liveTo <= ebbs[i]->lSeq))
-                            {
-                              spillThis (sym);
-                              continue;
-                            }
-                        }
-                    }
-                }
-              /* if we need ptr regs for the right side
-                 then mark it */
-              if (POINTER_GET (ic) && IS_SYMOP (IC_LEFT (ic))
-                  && getSize (OP_SYMBOL (IC_LEFT (ic))->type) <= (unsigned int) PTRSIZE)
-                {
-                  hc08_ptrRegReq++;
-                  ptrRegSet = 1;
-                }
-
-              /* else we assign registers to it */
-              _G.regAssigned = bitVectSetBit (_G.regAssigned, sym->key);
-              _G.totRegAssigned = bitVectSetBit (_G.totRegAssigned, sym->key);
-
-              for (j = 0; j < sym->nRegs; j++)
-                {
-                  if (sym->regType == REG_PTR)
-                      sym->regs[j] = getRegPtr (ic, ebbs[i], sym);
-                  else
-                      sym->regs[j] = getRegGpr (ic, ebbs[i], sym);
-
-                  /* if the allocation failed which means
-                     this was spilt then break */
-                  if (!sym->regs[j])
-                    {
-                      break;
-                    }
-                }
-
-              /* if it shares registers with operands make sure
-                 that they are in the same position */
-              if (IC_LEFT (ic) && IS_SYMOP (IC_LEFT (ic)) &&
-                  OP_SYMBOL (IC_LEFT (ic))->nRegs && ic->op != '=')
-                {
-                  positionRegs (OP_SYMBOL (IC_RESULT (ic)),
-                                OP_SYMBOL (IC_LEFT (ic)));
-                }
-              /* do the same for the right operand */
-              if (IC_RIGHT (ic) && IS_SYMOP (IC_RIGHT (ic)) &&
-                  OP_SYMBOL (IC_RIGHT (ic))->nRegs)
-                {
-                  positionRegs (OP_SYMBOL (IC_RESULT (ic)),
-                                OP_SYMBOL (IC_RIGHT (ic)));
-                }
-
-              if (ptrRegSet)
-                {
-                  hc08_ptrRegReq--;
-                  ptrRegSet = 0;
-                }
-#endif
             }
         }
     }
